--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,11 +18,14 @@
         </div>
         <div class="form-group" data-toggle="tooltip" data-placement="right" title="Password should be between 8 to 15 characters. Must contain at least one uppercase letter, one lowercase letter, one number and one special character(@$!%*?&)">
           <label for="password">Password<span class="red">*</span></label>
-          <input class="form-control" type="password" name="password" required placeholder="Password">
+          <input class="form-control pwd" type="password" name="password" required placeholder="Password">
         </div>
         <div class="form-group">
           <label for="chkpassword">Confirm Password <span class="red">*</span></label>
-          <input class="form-control" type="password" name="chkpassword" required placeholder="Confirm Password">
+          <input class="form-control pwd" type="password" name="chkpassword" required placeholder="Confirm Password">
+          <div class="float-right pwdbtn" data-toggle="tooltip" data-placement="right" title="Show Password" >
+            <i class="fas fa-eye"></i>
+          </div>
         </div>
         <div class="form-group">
           <button class="g-recaptcha btn btn-lg btn-primary btn-block" data-sitekey="6Le8D1QUAAAAABIjdI7D3dmF7Ny2Qov9LFmztylj" data-callback="onSubmit">
