--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="form-group">
-          <button class="g-recaptcha btn btn-lg btn-primary btn-block" data-sitekey="6Le8D1QUAAAAABIjdI7D3dmF7Ny2Qov9LFmztylj" data-callback="onSubmit">
+          <button class="g-recaptcha btn btn-lg btn-primary btn-block" data-callback="onSubmit" data-sitekey= "<%= process.env.DATA_SITE_KEY %>" >
           Sign Up!
           </button>
         </div>
